--- a/tarea 4.tex
+++ b/tarea 4.tex
@@ -12,8 +12,9 @@
     \usepackage[text={20cm,25cm},centering,top=1.5cm,bottom=1.5cm,letterpaper,showframe=false]{geometry}
 
     \definecolor{azul}{RGB}{10,80,190}
-    \definecolor{verde}{RGB}{0,120,50}
+    \definecolor{negro}{RGB}{0,0,0}
     \definecolor{rojo}{RGB}{190,80,10}
+    \definecolor{verde}{RGB}{0,120,50}
     \renewcommand{\baselinestretch}{1.2}
 
     \begin{document}
@@ -91,7 +92,7 @@
                     2q+r-1 & = & 0\\
                     2r+q-1 & = & 0
                 \end{eqnarray}
-                De (1) $r=1-2q$, sustituyendo en (2) $2(1-2q)+q-1=0 \Rightarrow 2-4q+q-1=0
+                De {\bf\color{rojo} (1)} $r=1-2q$, sustituyendo en {\bf\color{rojo} (2)} $2(1-2q)+q-1=0 \Rightarrow 2-4q+q-1=0
                 \Rightarrow q=\frac{1}{3} \therefore r=1-\frac{2}{3}=\frac{1}{3}$. Por lo
                 que se deduce que existe un punto crítico en $(\frac{1}{3},\frac{1}{3})$.
 
@@ -119,16 +120,74 @@
                     % a)
                     \item{
                         $x^2+2y-2z^2=0$
+                        
+                        \color{azul}
+                        Despejando $y$, tenemos $\displaystyle y=z^2-\frac{x^2}{2}$
+                        
+                        En el plano $XY$: $z=0 \Rightarrow y=-\frac{1}{2}x^2$
+                        \begin{center}
+                            \includegraphics[width=4.5cm]{img/7a1.png}
+                        \end{center}
+                        En el plano $XZ$: $y=0 \Rightarrow z^2-\frac{x^2}{2}=0$
+                        \begin{center}
+                            \includegraphics[width=4.5cm]{img/7a2.png}
+                        \end{center}
+                        En el plano $YZ$: $x=0 \Rightarrow y=z^2$
+                        \begin{center}
+                            \includegraphics[width=4.5cm]{img/7a3.png}
+                        \end{center}
+                        La ecuación representa un {\bf paraboloide hiperbólico}
+                        \begin{center}
+                            % \includegraphics[width=5cm]{img/7a.png}
+                        \end{center}
                     }
                     % b)
+                    \color{negro}
                     \item{
                         $x^2-y^2+z^2-2x+2y+4z+2=0$
+                        \color{azul}
+                        \begin{eqnarray*}
+                            (x^2-2x+1)-(y^2-2y+1)+(z^2+4z+4) & = & -2+4\\
+                            (x-1)^2-(y-1)^2+(z+2)^2          & = & 2\\[.3cm]
+                            \frac{(x-1)^2}{2}-\frac{(y-1)^2}{2}+\frac{(z+2)^2}{2}
+                            & = & 1
+                        \end{eqnarray*}
+                        
+                        En el plano $XY$:
+                        \(
+                            z=0 \Rightarrow
+                            \frac{(x-1)^2}{2}-\frac{(y-1)^2}{2}+2=1\Rightarrow
+                            \frac{(y-1)^2}{2}-\frac{(x-1)^2}{2}=1
+                        \)
+                        \begin{center}
+                            % \includegraphics[width=4.5cm]{img/7b1.png}
+                        \end{center}
+                        En el plano $XZ$:
+                        \(
+                            y=0\Rightarrow
+                            \frac{(x-1)^2}{2}-\frac{1}{2}+\frac{(z+2)^2}{2}=1\Rightarrow
+                            \frac{(x-1)^2}{2}+\frac{(z+2)^2}{2}=\frac{3}{2}\Rightarrow
+                            (x-1)^2+(z+2)^2=3
+                        \)
+                        \begin{center}
+                            % \includegraphics[width=4.5cm]{img/7b2.png}
+                        \end{center}
+                        En el plano $YZ$:
+                        \(
+                            x=0 \Rightarrow
+                            \frac{1}{2}-\frac{(y-1)^2}{2}+\frac{(z+2)^2}{2}=1\Rightarrow
+                            -\frac{(y-1)^2}{2}+\frac{(z+2)^2}{2}=-\frac{1}{2}\Rightarrow
+                            (y-1)^2-(z+2)^2=1\Rightarrow
+                        \)
+                        \begin{center}
+                            % \includegraphics[width=4.5cm]{img/7b3.png}
+                        \end{center}
+                        La ecuación representa un {\bf hiperboloide de un manto}
+                        \begin{center}
+                            % \includegraphics[width=5cm]{img/7b.png}
+                        \end{center}
                     }
                 \end{enumerate}
-                La traza es la intersección de la supercie con los planos coordenados
-                $XY,YZ \text{ y } XZ$.
-
-                \color{azul}
             }
         \end{enumerate}
     \end{document}
