--- a/tarea 4.tex
+++ b/tarea 4.tex
@@ -124,21 +124,21 @@
                         \color{azul}
                         Despejando $y$, tenemos $\displaystyle y=z^2-\frac{x^2}{2}$
                         
-                        En el plano $XY$: $z=0 \Rightarrow y=-\frac{1}{2}x^2$
+                        Traza en el plano $XY$: $z=0 \Rightarrow y=-\frac{1}{2}x^2$
                         \begin{center}
                             \includegraphics[width=4.5cm]{img/7a1.png}
                         \end{center}
-                        En el plano $XZ$: $y=0 \Rightarrow z^2-\frac{x^2}{2}=0$
+                        Traza en el plano $XZ$: $y=0 \Rightarrow z^2-\frac{x^2}{2}=0$
                         \begin{center}
                             \includegraphics[width=4.5cm]{img/7a2.png}
                         \end{center}
-                        En el plano $YZ$: $x=0 \Rightarrow y=z^2$
+                        Traza en el plano $YZ$: $x=0 \Rightarrow y=z^2$
                         \begin{center}
                             \includegraphics[width=4.5cm]{img/7a3.png}
                         \end{center}
                         La ecuación representa un {\bf paraboloide hiperbólico}
                         \begin{center}
-                            % \includegraphics[width=5cm]{img/7a.png}
+                            \includegraphics[width=6cm]{img/7a.png}
                         \end{center}
                     }
                     % b)
@@ -160,7 +160,7 @@
                             \frac{(y-1)^2}{2}-\frac{(x-1)^2}{2}=1
                         \)
                         \begin{center}
-                            % \includegraphics[width=4.5cm]{img/7b1.png}
+                            \includegraphics[width=4.5cm]{img/7b1.png}
                         \end{center}
                         En el plano $XZ$:
                         \(
@@ -170,7 +170,7 @@
                             (x-1)^2+(z+2)^2=3
                         \)
                         \begin{center}
-                            % \includegraphics[width=4.5cm]{img/7b2.png}
+                            \includegraphics[width=4.5cm]{img/7b2.png}
                         \end{center}
                         En el plano $YZ$:
                         \(
@@ -180,11 +180,11 @@
                             (y-1)^2-(z+2)^2=1\Rightarrow
                         \)
                         \begin{center}
-                            % \includegraphics[width=4.5cm]{img/7b3.png}
+                            \includegraphics[width=4.5cm]{img/7b3.png}
                         \end{center}
                         La ecuación representa un {\bf hiperboloide de un manto}
                         \begin{center}
-                            % \includegraphics[width=5cm]{img/7b.png}
+                            \includegraphics[width=6cm]{img/7b.png}
                         \end{center}
                     }
                 \end{enumerate}
